Fix covered points in visualizations

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -991,3 +991,12 @@ wz-xml-file-editor {
 discover-app-w .container-fluid {
   background: #fff;
 }
+
+.visChart__container .chart > svg{
+  position: absolute;
+}
+
+.visChart__container svg g.points.line, 
+.visChart__container svg g.points.area {
+  display: contents;
+}
